2008-01-31  Dan Winship  <danw@gnome.org>

	* libsoup/soup-date.c (soup_date_to_time_t): new

	* libsoup/soup-form.c (soup_form_decode): Remove "_urlencoded"
	from name. (And add back-compat #define.)
	(soup_form_encode): New, takes varargs parameters for each form
	construction.
	(soup_form_encode_hash, soup_form_encode_datalist): renamed, with
	back-compat #defines
	(soup_form_request_new, soup_form_request_new_from_hash)
	(soup_form_request_new_from_datalist): New methods to construct a
	GET or POST message with form data.

	* libsoup/soup-uri.c (soup_uri_set_query_from_fields): New, takes
	varargs like soup_form_encode().

	* libsoup/soup-value-utils.c (soup_value_hash_new_with_vals)
	(soup_value_hash_insert_vals, soup_value_hash_lookup_vals): New
	routines to work with multiple value hash values at once.
	(soup_value_array_new): tiny wrapper, for naming consistency
	(soup_value_array_new_with_vals, soup_value_array_append_vals):
	New routines to work with multiple value array values at once.

2008-01-28  Dan Winship  <danw@gnome.org>

	* configure.in: post-release bump to 2.3.1

2008-01-28  Dan Winship  <danw@gnome.org>

	* configure.in: Bump version to 2.3.0.1

	* NEWS: Update

	* docs/reference/Makefile.am (content_files): include
	porting-2.2-2.4.xml

2008-01-28  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message.c (soup_message_set_auth)
	(soup_message_set_proxy_auth): Use soup_message_headers_replace(),
	not soup_message_headers_append(), since only a single
	Authorization/Proxy-Authorization header is allowed. #512517.

	* libsoup/soup-auth-manager-ntlm.c (ntlm_request_started): Don't
	set an NTLM Authorization header if the message already has a
	Basic or Digest one.

	* tests/ntlm-test.c: Add some Basic auth and mixed NTLM/Basic auth
	tests

2008-01-28  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* docs/reference/libsoup-docs.sgml:

	Changed section titles so that they actually show
	something useful in DevHelp.
